force-app/main/default/objects/ssot__SalesOrderPaymentSummary__dlm/fields/Available_to_Refund__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Refund__c</fullName>
    <label>Available to Refund</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>