force-app/main/default/objects/ssot__SalesOrderPaymentSummary__dlm/fields/Pending_Refund__c.field-meta.xml
<CustomField>
    <fullName>Pending_Refund__c</fullName>
    <label>Pending Refund</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>