force-app/main/default/objects/ssot__SalesOrderPaymentSummary__dlm/fields/Refunded__c.field-meta.xml
<CustomField>
    <fullName>Refunded__c</fullName>
    <label>Refunded</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>